<resources>
    <string name="app_name">MarketingApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_update_sales">Update Sales</string>
    <string name="cust_name">Customer Name:</string>
    <string name="enter_cust_name">Enter Customer Name</string>
    <string name="units_sold">No. of Units Sold:</string>
    <string name="enter_units_sold">Enter Number</string>
    <string name="unit_value">Unit Value:</string>
    <string name="enter_unit_value">Enter Value (in Rs.Crs)</string>
    <string name="proj_name">Project Name</string>
    <string name="update_sales">Update Sale</string>
    <string name="title_activity_submit_page">Submit</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="hello_world">Hello world!</string>
</resources>

